added form to add comment box

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -4,141 +4,150 @@
 {% block content %}
 
 <div class="container-post">
-       <div class="container pb50">
-                <div class="row">
-                        <div class="col-md-9 mb40">
-                                <article>
-                               <!--main picture-->
-                                  {% if "placeholder" in post.header_img.url %}
-                                   <a href="{% url 'details_article' post.pk  %}" class="post-link"><img class="card-img-top"
-                                    src="https://climate.onep.go.th/wp-content/uploads/2020/01/default-image.png" alt="defalt profile image"></a>
-                                   {% else %}
-                                    <img src="{{ post.header_img.url }}" alt="" class="img-fluid mb30">
-                                   {% endif %}
+    <div class="container pb50">
+           <div class="row">
+                  <div class="col-md-9 mb40">
+                          <article>
+                              <!--main picture-->
+                              {% if "placeholder" in post.header_img.url %}
+                              <a href="{% url 'details_article' post.pk  %}" class="post-link"><img class="card-img-top"
+                               src="https://climate.onep.go.th/wp-content/uploads/2020/01/default-image.png" alt="defalt profile image"></a>
+                              {% else %}
+                               <img src="{{ post.header_img.url }}" alt="" class="img-fluid mb30">
+                              {% endif %}
                                 <!--main Post-->
-                                    <div class= "post-content">
-                                        <h3 class= "title-post">{{ post.title }}</h3>
-                                        <ul class="post-tag list-inline">
-                                       <!--user name/category-date posted-->
-                                            <li class="list-inline-item">
-                                                <i class="fa fa-user"></i><a href="#">{{ post.author.first_name }}  {{ post.author.last_name}}</a>
-                                            </li>
-                                            <li class="list-inline-item">
-                                                <i class="fa fa-calendar"></i> <a href="#">{{ post.publish_date }}</a>
-                                             </li>
-                                             <li class="list-inline-item">
-                                                <i class="fa fa-tags"></i> <a href="#">{{ post.category }}</a>
-                                              </li>
-                                        </ul>
-                                        <div class= "article-lead">
-                                                <p class="lead">{{ post.body|safe }}</p>
-                                        </div>
-                                        {% if user.is_authenticated %}
-                                        {% if user.id == post.author.id %}
-                                        <ul class="post-tag list-inline">
-                                             <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}">Edit</a></li>
-                                              <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}">Delete</a></li>
-                                        </ul>
-                                                {% endif %}
-                                        {% endif %}
-                                                
-                                        <hr class="mb40">
-                                        <br/><br/>
-
-                                        <div class="row like-icon">
-                                            <div class="col">
-                                                   <div class="total-likes">
-                                                        <form action="{% url 'post_like' post.pk %}" method="POST">
-                                                                {% csrf_token %}
-                                                                {% if user.is_authenticated %}
-                                                                    {% if liked %}
-                                                                    <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-danger btn-sm"><i class="fa fa-thumbs-o-up">
-                                                                      </i>{{ likes_total }}</button>
-                                                                    {% else %}
-                                                                        <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm"><i class="fa fa-thumbs-o-up">
-                                                                      </i>{{ likes_total }}</button>
-
-                                                                    {% endif %}
-                                                                     {%else %}
-                                                                        <small><a href="{% url 'login' %}">Login to Like</a></small>
-
-                                                                      {% endif %}  
-                                                        </form>
-
-                                                    </div>
+                               <div class= "post-content">
+                                   <h3 class= "title-post">{{ post.title }}</h3>
+                                   <ul class="post-tag list-inline">
+                                        <!--user name/category-date posted-->
+                                       <li class="list-inline-item">
+                                           <i class="fa fa-user"></i><a href="{% url 'show_profile_page' post.author.profile.id %}">
+                                                {{ post.author.first_name }}  {{ post.author.last_name}}</a>
+                                       </li>
+                                       <li class="list-inline-item">
+                                           <i class="fa fa-calendar"></i> <a href="#">{{ post.publish_date }}</a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                           <i class="fa fa-tags"></i> <a href="#">{{ post.category }}</a>
+                                         </li>
+                                   </ul>
+                                   <div class= "article-lead">
+                                           <p class="lead">{{ post.body|safe }}</p>
+                                   </div>
+                                   {% if user.is_authenticated %}
+                                   {% if user.id == post.author.id %}
+                                   <ul class="post-tag list-inline">
+                                        <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}">Edit</a></li>
+                                         <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}">Delete</a></li>
+                                   </ul>
+                                           {% endif %}
+                                   {% endif %}
+                                   <div class="row like-icon">
+                                        <div class="col">
+                                                <div class="total-likes">
+                                                     <form action="{% url 'post_like' post.pk %}" method="POST">
+                                                             {% csrf_token %}
+                                                             {% if user.is_authenticated %}
+                                                                 {% if liked %}
+                                                                 <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-danger btn-sm"><i class="fa fa-thumbs-o-up">
+                                                                   </i>{{ likes_total }}</button>
+                                                                 {% else %}
+                                                                   <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm"><i class="fa fa-thumbs-o-up">
+                                                                </i>{{ likes_total }}</button>
+  
+                                                                {% endif %}
+                                                                {%else %}
+                                                                <small><a href="{% url 'login' %}">Login to Like</a></small>
+  
+                                                                {% endif %}  
+                                                     </form>
+  
                                                 </div>
                                         </div>
-                                        <br/><br/>
+                                   </div>
+                                           
+                                   <hr class="mb40">
+                                   <br/><br/>
 
-                                        
-                                        <div class="card" style="width: 18rem;">
-                                                {% if post.author.profile.profile_picture %}
-                                                <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
-                                                {% else %}
-                                                <img src="{% static 'profilepicture.jpg' %}" alt="profile pic">
-                                                {% endif %}
-                                                <div class="card-body">
-                                                        <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name}}</h5>
-                                                        <p class="card-text">{{post.author.profile.bio}}</p>
-                                                        <p class="small text-muted">
-                                                           {% if post.author.profile %}
-                                                           <a href="{% url 'show_profile_page' post.author.profile.id %}"<i class="fa fa-user" aria-hidden="true"></i></a> |
-                                                           {% endif %}
-                                                           {%if post.author.profile.facebook_url %}
-                                                           <a href="{{post.author.profile.facebook_url}}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> |
-                                                           {% endif %}
-                                                           {%if post.author.profile.instagram_url %}
-                                                           <a href="{{post.author.profile.instagram_url}}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a> | 
-                                                           {% endif %}
-                                                           {%if post.author.profile.twitter_url %}
-                                                           <a href="{{post.author.profile.twitter_url}}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> |
-                                                           {% endif %}     
-                                                           {%if post.author.profile.website_url %}
-                                                           <a href="{{post.author.profile.website_url}}" target="_blank"><i class="fa fa-rss-square" aria-hidden="true"></i></a> |
-                                                        {% endif %}
-                                                        </p>     
-                                                </div>
-                                          
-                                        </div>
+                                   
+                                   <br/><br/>
 
-
-
-
-                                        
-
-                                    </div>
-                                </article>
-                        </div>
+                                   
+                                      <div class="card border-0" style="width: 18rem;">
+                                           {% if post.author.profile.profile_picture %}
+                                           <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
+                                           {% else %}
+                                           <img src="{% static 'profilepicture.jpg' %}" alt="profile pic">
+                                           {% endif %}
+                                           <div class="card-body">
+                                                   <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name}}</h5>
+                                                   <p class="card-text">{{post.author.profile.bio}}</p>
+                                                   <p class="small text-muted">
+                                                      {% if post.author.profile %}
+                                                      <a href="{% url 'show_profile_page' post.author.profile.id %}"<i class="fa fa-user" aria-hidden="true"></i></a> |
+                                                      {% endif %}
+                                                      {%if post.author.profile.facebook_url %}
+                                                      <a href="{{post.author.profile.facebook_url}}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> |
+                                                      {% endif %}
+                                                      {%if post.author.profile.instagram_url %}
+                                                      <a href="{{post.author.profile.instagram_url}}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a> | 
+                                                      {% endif %}
+                                                      {%if post.author.profile.twitter_url %}
+                                                      <a href="{{post.author.profile.twitter_url}}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> |
+                                                      {% endif %}     
+                                                      {%if post.author.profile.website_url %}
+                                                      <a href="{{post.author.profile.website_url}}" target="_blank"><i class="fa fa-rss-square" aria-hidden="true"></i></a> |
+                                                   {% endif %}
+                                                   </p>     
+                                           </div>
+                                       </div>
+                               </div> 
+                           </article>
+                    </div>
+           </div>
+     </div> 
+     <div class="row-comments">
+         <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+               <!-- Fluid width widget -->        
+               <div class="panel-default">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">
+                      <span class="comment"></span>Comments</h3>
+                    </div>
+                    <div class="panel-body">
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <img src="#" alt="profile pic" class="img-circle">
+                            </div>
+                            {% for comment in post.comments.all %}
+                            <div class="media-body">
+                                <h4 class="media-heading">
+                                    {{ comment.name }}
+                                    <br>
+                                    <small>
+                                        commented on <strong>{{ comment.date_added }}</strong>
+                                    </small>
+                                </h4>
+                                <p>
+                                    {{ comment.body }}
+                                </p>
+                            {% endfor %}
+                            </div>
+                        </li>
+                    </ul>
+                    <br/>
+                         {% if not post.comments.all %}
+                          No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
+                          {% else %}
+                         <a href ="{% url 'add_your_comments' post.pk %}" class="btn btn-default btn-block">Add your Comment</a>
+                         {% endif %}
                 </div>
-                <!--Function form to display comment section-->
-                <h2> Comments</h2>
-                <br/>
-                {% if not post.comments.all %}
-                No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
-                {% else %}
-                <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
-                <br/><br/>
-                        {% for comment in post.comments.all %}
-                        <strong>{{ comment.name }} -{{ comment.date_added }}</strong>
-                        <br/>
-                        {{ comment.body }}
-                        <a href ="{% url 'add_your_comments' post.pk %}"></a>
-                        {% endfor %}
-                <br/><br/>
-                <hr>
-                <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
-
-                {% endif %}
-
-                <br/>
-
-               
-                <hr class="mb40">
-                                          
-                <a href="{% url 'index' %}"class="btn btn-secondary">Back</a>
-        </div>      
+             </div>
+             <!-- End fluid width widget --> 
+         </div>
+    </div>     
 </div>
-
 
 
 {% endblock %}
