--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -3,25 +3,26 @@
 {% load static %}
 
 {% block content %}
-<body>
-  <section class="side">
-     <img src="#" alt="">
-  </section>
 
-  <section class="main">
-    <div class="login-container">
-      <p class="title"> Login </p>
-      <div class="separator"></div>
-      <p class="welcome-message">Please, provide login credencial to proceed and have
-        access to your user area.</p>
 
-        <form class="login" method="POST">
-           <div class="form-control">
-            {% csrf_token %}
-            {{ form.as_p }}
-           </div>
+
+  <div class="login-page">
+    <div class="form-container">
+        <h1 class="login-txt"> Login Form </h1>
+        <form action="#">
+          <div class="control">
+            <label for="name"> Name</label>
+            <input type="text" name="name" id="name">
+          </div>
+          <div class="control">
+            <label for="name"> Password</label>
+            <input type="text" name="password" id="password">
+          </div>
+          <div class="control">
+            <input type="submit" value="login">
+          </div>
         </form>
     </div>
-  </section>
+  </div>
 
 {% endblock %}
