--- a/static/css/style.css
+++ b/static/css/style.css
@@ -254,6 +254,41 @@ p:first-letter {
     padding-bottom: 1rem;
 }
 
-.login-register-banner {
-    background-color: #535768;
+/*Login Page*/
+
+
+.login-page {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background: url('../img/login-img.jpg');
+    background-size: cover;
+    background-position: center center;
+}
+.form-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3));
+    width: 380px;
+    padding: 50px 30px;
+    box-shadow: 7px 7px 60px #000;
+}
+
+.login-txt {
+    text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+.control input {
+    width: 100%;
+    display: block;
+    padding: 10px;
+    color:#222;
+    border:none;
+    outline: none;
+    margin: 1em 0;
 }
