--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,7 +261,7 @@ p:first-letter {
     position: relative;
     height: 100vh;
     width: 100%;
-    background: url('../img/login-img.jpg');
+    background: url('../img/login-bck.jpg');
     background-size: cover;
     background-position: center center;
 }
@@ -281,6 +281,7 @@ p:first-letter {
     font-size: 2em;
     text-align: center;
     margin-bottom: 2em;
+    color: #fff;
 }
 
 .control input {
@@ -291,4 +292,49 @@ p:first-letter {
     border:none;
     outline: none;
     margin: 1em 0;
+}
+
+label {
+    color: #fff;
+    font-weight: 500;
+}
+
+
+.control input[type="submit"]{
+    background-color: crimson;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    opacity: .7;
+    transition: opacity .3s ease;
+}
+
+.control input[type="submit"]:hover{
+    opacity: 1;
+}
+
+.link {
+    color: #fff;
+    font-weight: 400;
+}
+
+.link a{
+    text-decoration: none;
+    color:#fff;
+    opacity: .6;
+    opacity: opacity .3s ease;
+}
+
+.link a:hover{
+    opacity: 1;
+}
+
+.login-msg-banner {
+    padding-top: 0rem;
+    padding-bottom: 0px;
+}
+
+.login-user-banner {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
