--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -3,150 +3,157 @@
 {% block title%} {{ post.title_tag }}{% endblock%}
 {% block content %}
 
-<div class="container-post">
-    <div class="container pb50">
-           <div class="row">
-                  <div class="col-md-9 mb40">
-                          <article>
-                              <!--main picture-->
-                              {% if "placeholder" in post.header_img.url %}
-                              <a href="{% url 'details_article' post.pk  %}" class="post-link"><img class="card-img-top"
-                               src="https://climate.onep.go.th/wp-content/uploads/2020/01/default-image.png" alt="defalt profile image"></a>
-                              {% else %}
-                               <img src="{{ post.header_img.url }}" alt="" class="img-fluid mb30">
-                              {% endif %}
-                                <!--main Post-->
-                               <div class= "post-content">
-                                   <h3 class= "title-post">{{ post.title }}</h3>
-                                   <ul class="post-tag list-inline">
-                                        <!--user name/category-date posted-->
-                                       <li class="list-inline-item">
-                                         {{ post.author.first_name }}  {{ post.author.last_name}}</a>
-                                       </li>
-                                       <li class="list-inline-item">
-                                           <i class="fa fa-calendar"></i> <a href="#">{{ post.publish_date }}</a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                           <i class="fa fa-tags"></i> <a href="#">{{ post.category }}</a>
-                                         </li>
-                                   </ul>
-                                   <div class= "article-lead">
-                                           <p class="lead">{{ post.body|safe }}</p>
-                                   </div>
-                                   {% if user.is_authenticated %}
-                                   {% if user.id == post.author.id %}
-                                   <ul class="post-tag list-inline">
-                                        <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}">Edit</a></li>
-                                         <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}">Delete</a></li>
-                                   </ul>
-                                           {% endif %}
-                                   {% endif %}
-                                   <div class="row like-icon">
-                                        <div class="col">
-                                                <div class="total-likes">
-                                                     <form action="{% url 'post_like' post.pk %}" method="POST">
-                                                             {% csrf_token %}
-                                                             {% if user.is_authenticated %}
-                                                                 {% if liked %}
-                                                                 <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-danger btn-sm"><i class="fa fa-thumbs-o-up">
-                                                                   </i>{{ likes_total }}</button>
-                                                                 {% else %}
-                                                                   <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm"><i class="fa fa-thumbs-o-up">
-                                                                </i>{{ likes_total }}</button>
-  
-                                                                {% endif %}
-                                                                {%else %}
-                                                                <small><a href="{% url 'login' %}">Login to Like</a></small>
-  
-                                                                {% endif %}  
-                                                     </form>
-  
-                                                </div>
-                                        </div>
-                                   </div>
-                                           
-                                   <hr class="mb40">
-                                   <br/><br/>
-
-                                   
-                                   <br/><br/>
-
-                                   
-                                      <div class="card border-0" style="width: 18rem;">
-                                           {% if post.author.profile.profile_picture %}
-                                           <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
-                                           {% else %}
-                                           <img src="{% static 'profilepicture.jpg' %}" alt="profile pic">
-                                           {% endif %}
-                                           <div class="card-body">
-                                                   <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name}}</h5>
-                                                   <p class="card-text">{{post.author.profile.bio}}</p>
-                                                   <p class="small text-muted">
-                                                      {% if post.author.profile %}
-                                                      <a href="{% url 'show_profile_page' post.author.profile.id %}"<i class="fa fa-user" aria-hidden="true"></i></a> |
-                                                      {% endif %}
-                                                      {%if post.author.profile.facebook_url %}
-                                                      <a href="{{post.author.profile.facebook_url}}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> |
-                                                      {% endif %}
-                                                      {%if post.author.profile.instagram_url %}
-                                                      <a href="{{post.author.profile.instagram_url}}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a> | 
-                                                      {% endif %}
-                                                      {%if post.author.profile.twitter_url %}
-                                                      <a href="{{post.author.profile.twitter_url}}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> |
-                                                      {% endif %}     
-                                                      {%if post.author.profile.website_url %}
-                                                      <a href="{{post.author.profile.website_url}}" target="_blank"><i class="fa fa-rss-square" aria-hidden="true"></i></a> |
-                                                   {% endif %}
-                                                   </p>     
-                                           </div>
-                                       </div>
-                               </div> 
-                           </article>
+  <!----Body Section-->
+  <div class="container my-3 my-sm-5">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-8">
+            <h2 class="mb-3">{{ post.title }}</h2>
+            
+            <article class="mb-3">
+                {% if "placeholder" in post.header_img.url %}
+                            <a href="{% url 'details_article' post.pk  %}" class="post-link"><img class="card-img-top"
+                             src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg" alt="defalt profile image"></a>
+                            {% else %}
+                             <img src="{{ post.header_img.url }}" alt="" class="img-fluid mb30">
+                            {% endif %}
+                <header class="mb-2">
+                    <a href="#"class="badge badge-pill badge-cate">Category</a>
+                    <div>
+                        <div class="sub-title">Author Name: {{ post.author.first_name }}  {{ post.author.last_name}}</div>
+                        <div class="small">Posted on: {{ post.publish_date }}</div>
                     </div>
-           </div>
-     </div> 
-     <div class="row-comments">
-         <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
-               <!-- Fluid width widget -->        
-               <div class="panel-default">
-                    <div class="panel-heading">
-                      <h3 class="panel-title">
-                      <span class="comment"></span>Comments</h3>
-                    </div>
-                    <div class="panel-body">
-                    <ul class="media-list">
-                        <li class="media">
-                            <div class="media-left">
-                                <img src="#" alt="profile pic" class="img-circle">
-                            </div>
-                            {% for comment in post.comments.all %}
-                            <div class="media-body">
-                                <h4 class="media-heading">
-                                    {{ comment.name }}
-                                    <br>
-                                    <small>
-                                        commented on <strong>{{ comment.date_added }}</strong>
-                                    </small>
-                                </h4>
-                                <p>
-                                    {{ comment.body }}
-                                </p>
-                            {% endfor %}
-                            </div>
-                        </li>
+                </header>
+                <p><p class="lead">{{ post.body|safe }}</p></p>
+                {% if user.is_authenticated %}
+                    {% if user.id == post.author.id %}
+                    <ul class="post-tag list-inline">
+                        <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}">Edit</a></li>
+                        <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}">Delete</a></li>
                     </ul>
-                    <br/>
-                         {% if not post.comments.all %}
-                          No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
-                          {% else %}
-                         <a href ="{% url 'add_your_comments' post.pk %}" class="btn btn-default btn-block">Add your Comment</a>
-                         {% endif %}
-                </div>
-             </div>
-             <!-- End fluid width widget --> 
-         </div>
-    </div>     
+                    {% endif %}
+                {% endif %}
+            </article>
+            <br/><br/>
+            <hr class="mb40">
+            <br/><br/>
+          <!------>
+          <article class="mb-3">
+              <header class="mb-2">
+                  <a href="#"class="badge badge-pill badge-cate">Category</a>
+                  <h1 class="main-title">
+                      <a href="">Comments</a>
+                  </h1>
+                  <div>
+                      <a href=""class="sub-title">Author Name</a>
+                      <div class="small">Posted on:
+                          <time datetime="2021-01-02T02:15">
+                              Jan 02,2021 at 14:15PM
+                          </time></div>
+                          <div class="small">
+                              <span class="badge badge-cate">
+                                  <i class="fa fa-thumbs-o-up"aria-hidden="true"></i>
+                                  18<span class="sr-only">likes</span>
+                              </span>
+                              <span class="badge badge-cate">
+                                  <i class="fas fa-comments" aria-hidden="true"></i> 8
+                                  <span class="sr-only">Comments</span>
+                              </span>
+                          </div>
+                          <div class="small">
+                              <a href="#"class="badge badge-pill badge-tags">#tag</a>
+
+                          </div>
+                  </div>
+              </header>
+              <figure class="figure">
+                  <img src="images/cookies.jpg"class="figure-img img-fluid"alt="">
+                  <figcaption class="figure-caption small">
+                      <p class="mb-0">
+                          <i class="fas fa-utensils"aria-hidden="true">
+
+                          </i>
+                          <span class="sr-only">made by:</span>
+                          Chef Name
+                      </p>
+                  </figcaption>
+              </figure>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae doloremque officiis nemo rem, quia reiciendis quasi harum qui temporibus! Laboriosam.</p>
+              <a href=""class="btn main-btn">Read More..</a>
+          </article>
+         
+         
+          
+        </div>
+        <!-----End of the main body-->
+        <!--Asides Section-->
+<div class="col-12 col-md-6 p-5 col-lg-4">
+<aside>
+  <!---Recent Posts-->
+  <div class="list-group mb-3 p-2">
+    <div class="card" style="width: 400px p-2">
+        {% if post.author.profile.profile_picture %}
+        <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
+        {% else %}
+        <img src="{% static 'profilepicture.jpg' %}" alt="profile pic">
+        {% endif %}
+        <div class="card-body">
+            <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name}}</h5>
+            <p class="card-text">{{post.author.profile.bio}}</p>
+            <p class="small text-muted">
+                {% if post.author.profile %}
+                <a href="{% url 'show_profile_page' post.author.profile.id %}"<i class="fa fa-user" aria-hidden="true"></i></a> |
+                {% endif %}
+                {%if post.author.profile.facebook_url %}
+                <a href="{{post.author.profile.facebook_url}}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> |
+                {% endif %}
+                {%if post.author.profile.instagram_url %}
+                <a href="{{post.author.profile.instagram_url}}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a> | 
+                {% endif %}
+                {%if post.author.profile.twitter_url %}
+                <a href="{{post.author.profile.twitter_url}}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> |
+                {% endif %}     
+                {%if post.author.profile.website_url %}
+                <a href="{{post.author.profile.website_url}}" target="_blank"><i class="fa fa-rss-square" aria-hidden="true"></i></a> |
+              {% endif %}
+             
+            </p>  
+          
+        </div>
+      
+    </div>
+  
+  <h2 class="mb-3">Categories</h2>
+  <div class="list-group mb-3">
+      <a href=""class="list-group-item list-group-item-action text-black bg-light">
+          <i class="fas fa-utensils">{{ post.category }}</i>
+          Category 1
+      </a>
+      <a href=""class="list-group-item list-group-item-action text-black bg-light">
+          <i class="fas fa-apple-alt"></i>
+          Category 2
+      </a>
+  </div>
+  <!---Tag Cloud-->
+  <div class="card mb-3">
+      <div class="card-body">
+          <h5 class="card-title">Tag Cloud</h5>
+          <a href=""class="badge badge-tags">#tag</a>
+          <a href=""class="badge badge-tags">#othertag</a>
+      </div>
+  </div>
+  
+  <div class="card mb-3">
+      <div class="card-body">
+          <h5 class="card-title">About the Blog</h5>
+          <p class="card-text main-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae minima quasi, quidem nobis, placeat molestiae ullam rem quia perferendis expedita inventore, error animi ut.
+              <a href="">Read more..</a>
+          </p>
+      </div>
+  </div>
+</aside>
 </div>
 
 
+    </div>
+</div>
 {% endblock %}
