--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -125,7 +125,7 @@
   <h2 class="mb-3">Categories</h2>
   <div class="list-group mb-3">
       <a href=""class="list-group-item list-group-item-action text-black bg-light">
-          <i class="fas fa-utensils">{{ post.category }}</i>
+          <i class="fas fa-utensils">{{ post.category_posts }}</i>
           Category 1
       </a>
       <a href=""class="list-group-item list-group-item-action text-black bg-light">
