--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -151,6 +151,23 @@
 </aside>
 </div>
 
+<h2> Comments</h2>
+<br/>
+{% if not post.comments.all %}
+No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
+{% else %}
+<a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
+<br/><br/>
+        {% for comment in post.comments.all %}
+        <strong>{{comment.name }} -{{ comment.date_added }}</strong>
+        <br/>
+        {{ comment.body }}
+        <a href ="{% url 'add_your_comments' post.pk %}"></a>
+        {% endfor %}
+<br/><br/>
+<hr>
+
+{% endif %}
 
     </div>
 </div>
